# OpenWord

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  README.md  test_html_debug.cpp  test_html_parser  test_html_parser.cpp
.github/workflows/: ci.yml  pages.yml
benchmarks/: bench_document.cpp
cmake/: EmbedResource.cmake
demo/: generate_html_demo.cpp  generate_test_doc.cpp  main.cpp
docs/: tutorial.md
include/openword/: Document.h  MarkdownConverter.h  Validator.h
rust_math_engine/: Cargo.toml
rust_math_engine/src/: lib.rs
src/: ChartBuilder.cpp  ChartBuilder.h  DefaultStyles.h  Document.cpp  HtmlConverter.cpp  Internal.h  MarkdownConverter.cpp  MathConverter.cpp  Numbering.cpp  Paragraph.cpp  Run.cpp  Section.cpp  Styles.cpp  Table.cpp  Validator.cpp  main.cpp
tests/: test_chart.cpp  test_comments.cpp  test_document.cpp  test_extract.cpp  test_header_footer.cpp  test_html.cpp  test_markdown.cpp  test_metadata.cpp  test_mutability.cpp  test_styles.cpp  test_template.cpp  test_validator.cpp
